<resources>
    <string name="app_name">rentX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="primeiro_escolha_a_data">Primeiro,<br /> escolha a<br /> data</string>
    <string name="voc_quem_define_um_per_odo_e_n_s_mostraremos_os_carros_dispon_veis">Você é quem define um<br /> período, e nós mostraremos<br /> os carros disponíveis.</string>
    <string name="depois_escolha_o_carro">Depois,<br /> escolha o<br /> carro</string>
    <string name="v_rios_modelos_para_voc_dirigir_seguro_com_conforto_e_seguran_a">Vários modelos para você<br /> dirigir seguro, com conforto<br /> e segurança.</string>
    <string name="_01">01</string>
    <string name="o_que_voc_deseja_fazer">O que você deseja fazer</string>
    <string name="seja_bem_vindo">Seja Bem vindo</string>
    <string name="register">Register</string>
    <string name="estamos_quase_l">Estamos quase lá.</string>
    <string name="fa_a_seu_login_para_come_ar_uma_experi_ncia_incr_vel">Faça seu login para começar uma experiência incrível.</string>
    <string name="e_mail">E-mail</string>
    <string name="lembrar_me">Lembrar-me</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="login">Login</string>
    <string name="crie_sua_conta">Crie sua Conta</string>
    <string name="fa_a_seu_cadastro_de_forma_r_pida_e_f_cil">Faça seu cadastro de forma rápida e fácil.</string>
    <string name="nome">Nome</string>
    <string name="_1_dados">1. Dados</string>
    <string name="pr_ximo">Próximo</string>
    <string name="senha">Senha</string>
    <string name="conta_criada">Conta criada</string>
    <string name="agora_s_fazer_login_e_aproveitar">Agora é só fazer login e aproveitar.</string>
    <string name="ok">Ok</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="carlist">carlist</string>
    <string name="appointments">appointments</string>
    <string name="profile">profile</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="_5_appointments">5 appointments</string>
    <string name="que_carro_voc_precisa">Que carro você precisa?</string>
    <string name="ao_dia">Ao dia</string>
    <string name="registrar">Registrar</string>
    <string name="perfil">Perfil</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="dados">Dados</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="title_activity_tab_act">tab_act</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="salvar_altera_es">Salvar alterações</string>
    <string name="nova_senha">Nova senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
</resources>