<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.presentation.RegisterSuccessFragment"
    android:background="@color/app_black">

    <ImageView
        android:id="@+id/iv_success_union"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_success_union"/>

    <ImageView
        android:id="@+id/iv_success_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_success_union"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_success_check"
        android:paddingVertical="25dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/grey_border"/>

    <TextView
        android:id="@+id/tv_success_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_success_icon"
        android:layout_marginTop="25dp"
        android:text="@string/conta_criada"
        style="@style/TextViewTitleWhite"/>

    <TextView
        android:id="@+id/tv_success_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_success_title"
        android:layout_marginTop="10dp"
        style="@style/TextViewTextLightGrey"
        android:text="@string/agora_s_fazer_login_e_aproveitar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_success_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/ok"
        style="@style/ButtonBlack"/>



</androidx.constraintlayout.widget.ConstraintLayout>