<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.home.profile.UpdatePasswordFragment"
        android:paddingHorizontal="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_password_icon_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/IconBox" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_lock"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:hint="@string/nova_senha"
            style="@style/EditText"
            android:inputType="textPassword"
            app:layout_constraintStart_toEndOf="@id/cl_password_icon_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_password_icon_container"
            app:layout_constraintBottom_toBottomOf="@id/cl_password_icon_container"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_confirm_password_icon_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_password_icon_container"
            android:layout_marginTop="15dp"
            style="@style/IconBox" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_lock"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:hint="@string/confirmar_senha"
            style="@style/EditText"
            android:inputType="textPassword"
            app:layout_constraintStart_toEndOf="@id/cl_confirm_password_icon_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_confirm_password_icon_container"
            app:layout_constraintBottom_toBottomOf="@id/cl_confirm_password_icon_container"/>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/cl_confirm_password_icon_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/salvar_altera_es"
            style="@style/ButtonRed"
            android:enabled="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>