<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.presentation.RegisterPasswordFragment"
        android:paddingHorizontal="30dp">

        <ImageView
            android:id="@+id/register_password_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_chevron_left"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/tv_register_password_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_password_go_back"
            style="@style/TextViewTitle"
            android:text="@string/crie_sua_conta"
            android:layout_marginTop="80dp" />

        <TextView
            android:id="@+id/tv_register_password_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_password_title"
            style="@style/TextViewText"
            android:layout_marginTop="10dp"
            android:text="@string/fa_a_seu_cadastro_de_forma_r_pida_e_f_cil" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_password_text"
            app:layout_constraintBottom_toTopOf="@id/iv_icon_password_container"
            style="@style/TextViewBoldText"
            android:text="2 Senha" />

        <View
            android:id="@+id/iv_icon_password_container"
            android:layout_marginTop="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_password_text"
            style="@style/IconBox" />

        <ImageView
            android:id="@+id/iv_icon_password"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="@id/iv_icon_password_container"
            app:layout_constraintRight_toRightOf="@id/iv_icon_password_container"
            app:layout_constraintTop_toTopOf="@id/iv_icon_password_container"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_password_container"
            android:src="@drawable/ic_lock"
            android:backgroundTint="@color/app_input_background" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintLeft_toRightOf="@id/iv_icon_password_container"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_icon_password_container"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_password_container"
            android:layout_marginStart="15dp"
            android:hint="@string/senha"
            style="@style/EditText" />

        <View
            android:id="@+id/v_icon_confirm_password_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_password_container"
            android:layout_marginTop="25dp"
            style="@style/IconBox" />

        <ImageView
            android:id="@+id/iv_icon_confirm_password"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="@id/v_icon_confirm_password_container"
            app:layout_constraintRight_toRightOf="@id/v_icon_confirm_password_container"
            app:layout_constraintTop_toTopOf="@id/v_icon_confirm_password_container"
            app:layout_constraintBottom_toBottomOf="@id/v_icon_confirm_password_container"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/et_register_confirm_password"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintLeft_toRightOf="@id/v_icon_confirm_password_container"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_icon_confirm_password_container"
            app:layout_constraintBottom_toBottomOf="@id/v_icon_confirm_password_container"
            android:layout_marginStart="15dp"
            android:hint="Confirmar Senha"
            style="@style/EditText" />

        <Button
            android:id="@+id/bt_submit_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_icon_confirm_password_container"
            android:text="Cadastrar"
            style="@style/ButtonRed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>